-issue: Minor performance increase in boost process, reformat poller_boost.php cli
-feature: Add a timeout to the remote agent for realtime graphs
-feature: updated Dutch translations
-feature: Schema changes; Examined queries without key usage and added/changed some keys
-feature: Changed array parentheses from {} to []
-feature: Various code layout changes

1.1.27
-issue#1033: Issues inserting into dsstats table due to legacy data
-issue#1039: Using html_escape still double escapes.  Use strip_tags instead
-issue#1040: Resolving compatibility issue with PHP7.2

1.1.26
-issue#841: --input-fields variable not working with add_graphs.php cli
-issue#986: Resolve minor appearance problem on Modern theme
-issue#989: Resolve issue with data input method commands loosing spaces on import
-issue#1000: add_graphs.php not recognizing input fields
-issue#1003: Reversing resolution to Issue#995 due to adverse impact to polling times
-issue#1008: Remove developer debug warning about thumbnail validation
-issue#1009: Resolving minor issue with cmd_realtime.php and a changing hostname
-issue#1010: CVE-2017-15194 - Path-Based Cross-Site Scripting (XSS)
-issue#1027: Confirm that the PHP date.timezone setting is properly set during install
-issue: Fixed database session handling for PHP 7.1
-issue: Fixed some missing i18n
-issue: Fixed typo's
-feature: Updated Dutch translations
-feature: Schema changes; Examined queries without key usage and added/changed some keys
-feature: Some small improvements

1.1.25
-issue#966: Email still using SMTP security even though set to none
-issue#995: Redirecting exec_background() to dev null breaks some functions
-issue#998: Allow removal of external data template and prevent their creation
-issue: Remove spikes uses wrong variance value from WebGUI
-issue: Changing filters on log page does not reset to first page
-issue: Allow manual creation of external data sources once again
-feature: Updated Dutch translations

1.1.24