@@ -1,1 +1,1 @@
-5.2.25
+5.2.26
